[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Yerl2Attack.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Yerl2Walk.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy2.gd" type="Script" id=3]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.64527, 5.19715 )

[sub_resource type="CircleShape2D" id=2]
radius = 14.1285

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.19227
height = 0.437167

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.97497, 5.43452 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 11, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 22, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 33, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 55, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 66, 0, 11, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 5.9386, 5.45307 )

[node name="Enemy2" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 1088
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.9653, -0.133434 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DefendingArea" type="Area2D" parent="."]
priority = 1.0
collision_layer = 4
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( 2.99641, 0.239047 )
shape = SubResource( 3 )

[node name="AttackingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "Walk"
frame = 4
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.722
pitch_scale = 1.33

[node name="AttackingMeleeArea" type="Area2D" parent="."]
scale = Vector2( 0.72, 1 )
monitorable = false
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingMeleeArea"]
shape = SubResource( 20 )
[connection signal="hit" from="." to="." method="_on_Enemy2_hit" flags=3]
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered"]
[connection signal="area_entered" from="AttackingMeleeArea" to="." method="_on_AttackingMeleeArea_area_entered" flags=3]
